@@ -32,7 +32,7 @@ Gord Brown \\ \Rcode{gdbzork@gmail.com}
 \and University of Cambridge\\Cancer Research UK - Cambridge Institute
 }
 
-\date{Edited: May 17, 2016; Compiled: \today}
+\date{Edited: March 27, 2017; Compiled: \today}
 
 \maketitle
 
@@ -313,28 +313,11 @@ This sections covers Venn diagrams, MA plots, PCA plots, Boxplots, and Heatmaps.
 \subsection{Venn diagrams}
 
 Venn diagrams are useful for examining overlaps between peaksets, 
-particularly when determining how best to derive consensus peaksets for further analysis. 
-Section 6.2, which discusses consensus peaksets, shows a number of Venn plots in context, 
+particularly when determining how best to derive consensus 
+peaksets for further analysis. 
+Section 6.2, which discusses consensus peaksets, shows a number of
+Venn plots in context, 
 and the help page for \Rcode{dba.plotVenn} has a number of additional examples.
-
-\subsection{MA plots}
-MA plots are a useful way to visualize the effect of normalization on data, 
-as well as seeing which of the datapoints are being identified as differentially bound. 
-An MA plot can be obtained for the resistant-responsive contrast as follows:
-
-<<tamox_sdb_ma, fig=TRUE, include=FALSE, width=12, height=9 >>=
-data(tamoxifen_analysis)
-dba.plotMA(tamoxifen)
-@
-\incfig{DiffBind-tamox_sdb_ma}{.66\textwidth}{MA plot of Resistant-Responsive contrast.}
-  {Sites identified as significantly differentially bound shown in red. Generated by: \Rcode{dba.plotMA(tamoxifen)}}
-
-The plot is shown in  Figure~\ref{DiffBind-tamox_sdb_ma}. Each point represents a binding site, 
-with points in red representing sites identified as differentially bound. 
-The plot shows how the differentially bound sites appear to have an absolute log fold difference of at least 2. 
-It also suggests that more ERa binding sites lose binding affinity in the tamoxifen resistant condition than gain binding affinity, 
-as evidenced by more red dots below the center line than are above it. 
-This same data can also be shown with the concentrations of each sample groups plotted against each other plot using \Rcode{dba.plotMA(tamoxifen, bXY=TRUE)}.
 
 \subsection{PCA plots}
 While the correlation heatmaps already seen are good for showing clustering, 
@@ -343,6 +326,7 @@ A PCA plot corresponding to Figure~\ref{DiffBind-tamox_aff_corhm},
 which includes normalized read counts for all the binding sites, can be obtained as follows:
 
 <<tamox_aff_pca, fig=TRUE, include=FALSE, width=9, height=9 >>=
+data(tamoxifen_analysis)
 dba.plotPCA(tamoxifen,DBA_TISSUE,label=DBA_CONDITION)
 @
 \incfig{DiffBind-tamox_aff_pca}{.66\textwidth}{PCA plot using affinity data for all sites.}
@@ -369,6 +353,39 @@ For example, if you want to see where the replicates for each of the unique cell
 \Rcode{dba.plotPCA(tamoxifen, attributes=c(DBA\_TISSUE,DBA\_CONDITION),label=DBA\_REPLICATE}. 
 If your installation of \R supports 3D graphics using the \Rpackage{rgl} package, try \Rcode{dba.plotPCA(tamoxifen, b3D=T)}. 
 Seeing the first three principal components can be a useful exploratory exercise.
+
+\subsection{MA plots}
+MA plots are a useful way to visualize the effect of normalization on data, 
+as well as seeing which of the datapoints are being identified as differentially bound. 
+An MA plot can be obtained for the resistant-responsive contrast as follows:
+
+<<tamox_sdb_ma, fig=TRUE, include=FALSE, width=12, height=9 >>=
+dba.plotMA(tamoxifen)
+@
+\incfig{DiffBind-tamox_sdb_ma}{.66\textwidth}{MA plot of Resistant-Responsive contrast.}
+  {Sites identified as significantly differentially bound shown in red. Generated by: \Rcode{dba.plotMA(tamoxifen)}}
+
+The plot is shown in Figure~\ref{DiffBind-tamox_sdb_ma}. Each point represents a binding site, 
+with points in red representing sites identified as differentially bound. 
+The plot shows how the differentially bound sites appear to have an absolute log fold difference of at least 2. 
+It also suggests that more ERa binding sites lose binding affinity in the tamoxifen resistant condition than gain binding affinity, 
+as evidenced by more red dots below the center line than are above it. 
+This same data can also be shown with the concentrations of each sample groups plotted against each other plot using \Rcode{dba.plotMA(tamoxifen, bXY=TRUE)}.
+
+\subsection{Volcano plots}
+
+Similar to MA plots, Volcano plots also highlight significantly differentially bound sitesand show their fold changes. 
+Here, however, the confidence statistic (FDR or p-value) is 
+shown on a negative log scale.
+
+For example, the same data as plotted in Figure~\ref{DiffBind-tamox_sdb_ma} can be visualized as a volcano plot:
+<<tamox_sdb_volcano, fig=TRUE, include=FALSE, width=12, height=9 >>=
+dba.plotVolcano(tamoxifen)
+@
+\incfig{DiffBind-tamox_sdb_volcano}{.66\textwidth}{Volcano plot of Resistant-Responsive contrast.}
+  {Sites identified as significantly differentially bound shown in red. Generated by: \Rcode{dba.plotVolcano(tamoxifen)}}
+
+The plot is shown in  Figure~\ref{DiffBind-tamox_sdb_volcano}. 
 
 \subsection{Boxplots}
 
